basic layout created

--- a/index.html
+++ b/index.html
@@ -1,1 +1,40 @@
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Online Calculator</title>
+    <link rel="stylesheet" href="style.css"
+    >
+</head>
+<body>
+    <p>Hola mundo</p>
+    <div id="calculator">
+        <div id="display"></div>
+        <div id="buttons">
+            <div class="button"><span class="content">7</span></div>
+            <div class="button"><span class="content">8</span></div>        
+            <div class="button"><span class="content">9</span></div>
+            <div class="button"><span class="content">DEL</span></div>        
+            <div class="button"><span class="content">AC</span></div>
+            <div class="button"><span class="content">4</span></div>        
+            <div class="button"><span class="content">5</span></div>
+            <div class="button"><span class="content">6</span></div>        
+            <div class="button"><span class="content">X</span></div>
+            <div class="button"><span class="content">%</span></div>        
+            <div class="button"><span class="content">1</span></div>
+            <div class="button"><span class="content">2</span></div>        
+            <div class="button"><span class="content">3</span></div>
+            <div class="button"><span class="content">+</span></div>        
+            <div class="button"><span class="content">-</span></div>
+            <div class="button"><span class="content">0</span></div>        
+            <div class="button"><span class="content">.</span></div>
+            <div class="button"><span class="content">1</span></div>        
+            <div class="button"><span class="content">ANS</span></div>
+            <div class="button"><span class="content">=</span></div>        
 
+
+        
+    </div> 
+    <script src="script.js"></script>
+</body>
+</html>
