numbers can be displayed on screen and an array its make off the button pressed

--- a/index.html
+++ b/index.html
@@ -9,28 +9,28 @@
 <body>
     <p>Hola mundo</p>
     <div id="calculator">
-        <div id="display"></div>
+        <div id="display"><span id="display"><p></p></span></div>
         <div id="buttons">
-            <div class="button"><span class="content">7</span></div>
-            <div class="button"><span class="content">8</span></div>        
-            <div class="button"><span class="content">9</span></div>
-            <div class="button"><span class="content">DEL</span></div>        
-            <div class="button"><span class="content">AC</span></div>
-            <div class="button"><span class="content">4</span></div>        
-            <div class="button"><span class="content">5</span></div>
-            <div class="button"><span class="content">6</span></div>        
-            <div class="button"><span class="content">X</span></div>
-            <div class="button"><span class="content">%</span></div>        
-            <div class="button"><span class="content">1</span></div>
-            <div class="button"><span class="content">2</span></div>        
-            <div class="button"><span class="content">3</span></div>
-            <div class="button"><span class="content">+</span></div>        
-            <div class="button"><span class="content">-</span></div>
-            <div class="button"><span class="content">0</span></div>        
-            <div class="button"><span class="content">.</span></div>
-            <div class="button"><span class="content">1</span></div>        
-            <div class="button"><span class="content">ANS</span></div>
-            <div class="button"><span class="content">=</span></div>        
+            <div class="button"><span data-onScreen='yes' data-type='number'    class="content">7</span></div>
+            <div class="button"><span data-onScreen='yes' data-type='number'  class="content">8</span></div>        
+            <div class="button"><span data-onScreen='yes' data-type='number'  class="content">9</span></div>
+            <div class="button"><span data-onScreen='no' data-type='del'  class="content">DEL</span></div>        
+            <div class="button"><span data-onScreen='no' data-type='ac'  class="content">AC</span></div>
+            <div class="button"><span data-onScreen='yes' data-type='number'  class="content">4</span></div>        
+            <div class="button"><span data-onScreen='yes' data-type='number'  class="content">5</span></div>
+            <div class="button"><span data-onScreen='yes' data-type='number'  class="content">6</span></div>        
+            <div class="button"><span data-onScreen='yes' data-type='op'  class="content">x</span></div>
+            <div class="button"><span data-onScreen='yes' data-type='op'  class="content">%</span></div>        
+            <div class="button"><span data-onScreen='yes' data-type='number'  class="content">1</span></div>
+            <div class="button"><span data-onScreen='yes' data-type='number'  class="content">2</span></div>        
+            <div class="button"><span data-onScreen='yes' data-type='number'  class="content">3</span></div>
+            <div class="button"><span data-onScreen='yes' data-type='op'  class="content">+</span></div>        
+            <div class="button"><span data-onScreen='yes' data-type='op'  class="content">-</span></div>
+            <div class="button"><span data-onScreen='yes' data-type='number'  class="content">0</span></div>        
+            <div class="button"><span data-onScreen='yes' data-type='dot'  class="content">.</span></div>
+            <div class="button"><span data-onScreen='no' data-type=''  class="content"></span></div>        
+            <div class="button"><span data-onScreen='no' data-type='answe'  class="content">ANS</span></div>
+            <div class="button"><span data-onScreen='no' data-type='equal'  class="content">=</span></div>        
 
 
         
