--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <div class="button"><span data-value='7' data-onScreen='yes' data-type='number'    class="content">7</span></div>
             <div class="button"><span data-value='8' data-onScreen='yes' data-type='number'  class="content">8</span></div>        
             <div class="button"><span data-value='9' data-onScreen='yes' data-type='number'  class="content">9</span></div>
-            <div class="button"><span data-value='' data-onScreen='no' data-type='del'  class="content">DEL</span></div>        
-            <div class="button"><span data-value='' data-onScreen='no' data-type='ac'  class="content">AC</span></div>
+            <div class="button"><span data-value='del' data-onScreen='no' data-type='del'  class="content">DEL</span></div>        
+            <div class="button"><span data-value='ac' data-onScreen='no' data-type='ac'  class="content">AC</span></div>
             <div class="button"><span data-value='4' data-onScreen='yes' data-type='number'  class="content">4</span></div>        
             <div class="button"><span data-value='5' data-onScreen='yes' data-type='number'  class="content">5</span></div>
             <div class="button"><span data-value='6' data-onScreen='yes' data-type='number'  class="content">6</span></div>        
