add the keyboard functionality

--- a/index.html
+++ b/index.html
@@ -9,28 +9,28 @@
 <body>
     <p>Hola mundo</p>
     <div id="calculator">
-        <div id="display"><span id="display"><p></p></span></div>
+        <div id="display"><span  ><p></p></span></div>
         <div id="buttons">
-            <div class="button"><span data-value='7' data-onScreen='yes' data-type='number'    class="content">7</span></div>
-            <div class="button"><span data-value='8' data-onScreen='yes' data-type='number'  class="content">8</span></div>        
-            <div class="button"><span data-value='9' data-onScreen='yes' data-type='number'  class="content">9</span></div>
-            <div class="button"><span data-value='del' data-onScreen='no' data-type='del'  class="content">DEL</span></div>        
-            <div class="button"><span data-value='ac' data-onScreen='no' data-type='ac'  class="content">AC</span></div>
-            <div class="button"><span data-value='4' data-onScreen='yes' data-type='number'  class="content">4</span></div>        
-            <div class="button"><span data-value='5' data-onScreen='yes' data-type='number'  class="content">5</span></div>
-            <div class="button"><span data-value='6' data-onScreen='yes' data-type='number'  class="content">6</span></div>        
-            <div class="button"><span data-value='mul' data-onScreen='yes' data-type='op'  class="content">x</span></div>
-            <div class="button"><span data-value='div' data-onScreen='yes' data-type='op'  class="content">%</span></div>        
-            <div class="button"><span data-value='1' data-onScreen='yes' data-type='number'  class="content">1</span></div>
-            <div class="button"><span data-value='2' data-onScreen='yes' data-type='number'  class="content">2</span></div>        
-            <div class="button"><span data-value='3' data-onScreen='yes' data-type='number'  class="content">3</span></div>
-            <div class="button"><span data-value='sum' data-onScreen='yes' data-type='op'  class="content">+</span></div>        
-            <div class="button"><span data-value='sub' data-onScreen='yes' data-type='op'  class="content">-</span></div>
-            <div class="button"><span data-value='0' data-onScreen='yes' data-type='number'  class="content">0</span></div>        
-            <div class="button"><span data-value='' data-onScreen='yes' data-type='number'  class="content">.</span></div>
-            <div class="button"><span data-value='' data-onScreen='no' data-type=''  class="content"></span></div>        
-            <div class="button"><span data-value='' data-onScreen='no' data-type='answe'  class="content">ANS</span></div>
-            <div class="button"><span data-value='eq' data-onScreen='no' data-type='op'  class="content">=</span></div>        
+            <div class="button"><span data-key='7' data-value='7' data-onScreen='yes' data-type='number'    class="content">7</span></div>
+            <div class="button"><span data-key='8' data-value='8' data-onScreen='yes' data-type='number'  class="content">8</span></div>        
+            <div class="button"><span data-key='9' data-value='9' data-onScreen='yes' data-type='number'  class="content">9</span></div>
+            <div class="button"><span              data-value='del' data-onScreen='no' data-type='del'  class="content">DEL</span></div>        
+            <div class="button"><span   data-value='ac' data-onScreen='no' data-type='ac'  class="content">AC</span></div>
+            <div class="button"><span data-key='4' data-value='4' data-onScreen='yes' data-type='number'  class="content">4</span></div>        
+            <div class="button"><span data-key='5' data-value='5' data-onScreen='yes' data-type='number'  class="content">5</span></div>
+            <div class="button"><span data-key='6' data-value='6' data-onScreen='yes' data-type='number'  class="content">6</span></div>        
+            <div class="button"><span data-key='*' data-value='mul' data-onScreen='yes' data-type='op'  class="content">x</span></div>
+            <div class="button"><span data-key='/' data-value='div' data-onScreen='yes' data-type='op'  class="content">%</span></div>        
+            <div class="button"><span data-key='1' data-value='1' data-onScreen='yes' data-type='number'  class="content">1</span></div>
+            <div class="button"><span data-key='2' data-value='2' data-onScreen='yes' data-type='number'  class="content">2</span></div>        
+            <div class="button"><span data-key='3' data-value='3' data-onScreen='yes' data-type='number'  class="content">3</span></div>
+            <div class="button"><span data-key='+' data-value='sum' data-onScreen='yes' data-type='op'  class="content">+</span></div>        
+            <div class="button"><span data-key='-' data-value='sub' data-onScreen='yes' data-type='op'  class="content">-</span></div>
+            <div class="button"><span data-key='0' data-value='0' data-onScreen='yes' data-type='number'  class="content">0</span></div>        
+            <div class="button"><span data-key='.' data-value='' data-onScreen='yes' data-type='number'  class="content">.</span></div>
+            <div class="button"><span   data-value='' data-onScreen='no' data-type=''  class="content"></span></div>        
+            <div class="button"><span   data-value='' data-onScreen='no' data-type='answe'  class="content">ANS</span></div>
+            <div class="button"><span data-key='=' data-value='eq' data-onScreen='no' data-type='op'  class="content">=</span></div>        
 
 
         
