--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     >
 </head>
 <body>
-    <p>Hola mundo</p>
+  <div id="container">
+    
     <div id="calculator">
         <div id="display"><span  ><p></p></span></div>
         <div id="buttons">
@@ -33,7 +34,7 @@
             <div class="button"><span data-key='=' data-value='eq' data-onScreen='no' data-type='op'  class="content">=</span></div>        
 
 
-        
+        </div>  
     </div> 
     <script src="script.js"></script>
 </body>
